--- a/Frontend/src/index.css
+++ b/Frontend/src/index.css
@@ -1,6 +1,4 @@
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
+@import "tailwindcss";
 
 .flex-1::-webkit-scrollbar {
   display: none;
